--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="content">
             <header>
                 <ul class="header-links-list">
-                    <li id="home"><a href="index.html">Home</a></li>
-                    <li class="header-link"><a href='index_resume.html'>Resume</a></li>
-                    <li class="header-link"><a href='index_gportfolio.html'>GIS Portfolio</a></li>
-                    <li class="header-link"><a href='index_pportfolio.html'>Programming Portfolio</a></li>
+                    <li id="home"><a href="html/index.html">Home</a></li>
+                    <li class="header-link"><a href='html/index_resume.html'>Resume</a></li>
+                    <li class="header-link"><a href='html/index_gportfolio.html'>GIS Portfolio</a></li>
+                    <li class="header-link"><a href='html/index_pportfolio.html'>Programming Portfolio</a></li>
                 </ul>
             </header>
 
